Fix spacing in NewDogEar

--- a/apps/dogEars/client/app.scss
+++ b/apps/dogEars/client/app.scss
@@ -52,3 +52,11 @@
     color: $text-muted;
   }
 }
+
+.form-text {
+  margin-bottom: 0;
+}
+
+.add-note-button {
+  margin-top: 0.5rem;
+}
